tests/NormalTests/paczka1/small_fuzzy/70293022.err
Error in line 1: DrGhq A909 44,7
Error in line 5: DrGhq S565 90,0
Error in line 11: pR8EpwM A934 60,1
Error in line 10: DrGhq A909 30,4
